sakina-ip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sakina-ingress
  namespace: sakina-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sakina-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sakina-frontend
                port:
                  number: 80
